# research-flow-template-claude-desktop

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  _config.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-commit-protected-branch.sh  block-source-modification.sh  post-memory-update.sh
.claude/skills/: analyze.md  critique.md  distill.md  evidence.md  examples.md  experiment.md  import.md  lint.md  quickstart.md  research.md  setup.md  synthesize.md  vastai.md  verify.md
.claude/skills/read-pdf/: SKILL.md
.claude/skills/read-pdf/scripts/: pdf_to_images.py
.github/ISSUE_TEMPLATE/: finding.md  hypothesis.md  research-goal.md
.github/workflows/: ci.yml
docs/: claude-code-guide.md  claude-code-quickstart.md  getting-started.md  git-workflow.md  index.md  memory-page-template.md  pdf-to-agents-quickstart.md  sample-pipeline.md
examples/quickstart/: README.md  train.py
examples/quickstart/expected/: metrics.json  run.log.snippet
examples/quickstart/sample-run/: README.md
examples/quickstart/sample-run/goals/: quickstart-pipeline.md
examples/quickstart/sample-run/memory/: index.md  log.md
examples/quickstart/sample-run/outputs/: quickstart-synthesis.md
examples/quickstart/sample-run/results/: loss_curve.csv  metrics.json
examples/single-gpu-experiment/: README.md  train.py
examples/single-gpu-experiment/expected/: metrics.json
experiments/results/: run-log.jsonl
memory/: index.md  log.md
outputs/critiques/: template-consistency-audit.md
scripts/: build-docs-pdf.py  export-conversation.py
(+2 files in other folders)
