[project]
name = "research-flow"
version = "0.1.0"
description = "Agentic research system with persistent working memory"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "tqdm>=4.60",
    "pyyaml>=6.0.3",
    "pymupdf>=1.24",
    "vastai>=1.0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
